--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scientific Calculator</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css"> <!-- fixed filename -->
 </head>
 <body>
   <div class="calculator">
     <h1>Scientific Calculator</h1>
     <input type="text" id="display" readonly>
 
+    <!-- Basic Buttons -->
     <div class="buttons">
       <!-- Row 1 -->
       <button onclick="clearDisplay()">C</button>
@@ -41,8 +42,10 @@
       <button onclick="insert('.')">.</button>
       <button onclick="calculate()">=</button>
       <button onclick="insert('+')">+</button>
+    </div>
 
-      <!-- Scientific Row -->
+    <!-- Scientific Buttons -->
+    <div class="sci-buttons">
       <button onclick="insert('Math.sin(')">sin</button>
       <button onclick="insert('Math.cos(')">cos</button>
       <button onclick="insert('Math.tan(')">tan</button>
