--- a/index.html
+++ b/index.html
@@ -13,35 +13,30 @@
 
     <!-- Basic Buttons -->
     <div class="buttons">
-      <!-- Row 1 -->
-      <button onclick="clearDisplay()">C</button>
-      <button onclick="backspace()">⌫</button>
-      <button onclick="insert('(')">(</button>
-      <button onclick="insert(')')">)</button>
+      <button class="function" onclick="clearDisplay()">C</button>
+      <button class="function" onclick="backspace()">⌫</button>
+      <button class="function" onclick="insert('(')">(</button>
+      <button class="function" onclick="insert(')')">)</button>
 
-      <!-- Row 2 -->
       <button onclick="insert('7')">7</button>
       <button onclick="insert('8')">8</button>
       <button onclick="insert('9')">9</button>
-      <button onclick="insert('/')">÷</button>
+      <button class="operator" onclick="insert('/')">÷</button>
 
-      <!-- Row 3 -->
       <button onclick="insert('4')">4</button>
       <button onclick="insert('5')">5</button>
       <button onclick="insert('6')">6</button>
-      <button onclick="insert('*')">×</button>
+      <button class="operator" onclick="insert('*')">×</button>
 
-      <!-- Row 4 -->
       <button onclick="insert('1')">1</button>
       <button onclick="insert('2')">2</button>
       <button onclick="insert('3')">3</button>
-      <button onclick="insert('-')">−</button>
+      <button class="operator" onclick="insert('-')">−</button>
 
-      <!-- Row 5 -->
       <button onclick="insert('0')">0</button>
       <button onclick="insert('.')">.</button>
-      <button onclick="calculate()">=</button>
-      <button onclick="insert('+')">+</button>
+      <button class="equals" onclick="calculate()">=</button>
+      <button class="operator" onclick="insert('+')">+</button>
     </div>
 
     <!-- Scientific Buttons -->
