--- a/index.html
+++ b/index.html
@@ -1,58 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Scientific Calculator</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="calculator">
-    <h1>Scientific Calculator</h1>
-    <input type="text" id="display" readonly>
-
-    <!-- Basic Buttons -->
-    <div class="buttons">
-      <button class="function" onclick="clearDisplay()">C</button>
-      <button class="function" onclick="backspace()">⌫</button>
-      <button class="function" onclick="insert('(')">(</button>
-      <button class="function" onclick="insert(')')">)</button>
-
-      <button onclick="insert('7')">7</button>
-      <button onclick="insert('8')">8</button>
-      <button onclick="insert('9')">9</button>
-      <button class="operator" onclick="insert('/')">÷</button>
-
-      <button onclick="insert('4')">4</button>
-      <button onclick="insert('5')">5</button>
-      <button onclick="insert('6')">6</button>
-      <button class="operator" onclick="insert('*')">×</button>
-
-      <button onclick="insert('1')">1</button>
-      <button onclick="insert('2')">2</button>
-      <button onclick="insert('3')">3</button>
-      <button class="operator" onclick="insert('-')">−</button>
-
-      <button onclick="insert('0')">0</button>
-      <button onclick="insert('.')">.</button>
-      <button class="equals" onclick="calculate()">=</button>
-      <button class="operator" onclick="insert('+')">+</button>
+    <div class="header">
+      <div class="brand">SciCalc</div>
+      <div class="mode">Scientific</div>
     </div>
+    <div class="display">
+      <div class="small-display" id="history"></div>
+      <div class="main-display" id="result">0</div>
+    </div>
+    <div class="keys">
+      <button class="key fn" data-action="clear">AC</button>
+      <button class="key fn" data-action="del">DEL</button>
+      <button class="key fn" data-value="(">(</button>
+      <button class="key fn" data-value=")">)</button>
+      <button class="key fn" data-action="sqrt">√</button>
+      <button class="key op" data-value="/">÷</button>
 
-    <!-- Scientific Buttons -->
-    <div class="sci-buttons">
-      <button onclick="insert('Math.sin(')">sin</button>
-      <button onclick="insert('Math.cos(')">cos</button>
-      <button onclick="insert('Math.tan(')">tan</button>
-      <button onclick="insert('Math.sqrt(')">√</button>
+      <button class="key fn" data-action="sin">sin</button>
+      <button class="key fn" data-action="cos">cos</button>
+      <button class="key fn" data-action="tan">tan</button>
+      <button class="key fn" data-action="log">log</button>
+      <button class="key fn" data-action="pi">π</button>
+      <button class="key op" data-value="*">×</button>
 
-      <button onclick="insert('Math.pow(')">xʸ</button>
-      <button onclick="insert('Math.log(')">ln</button>
-      <button onclick="insert('Math.exp(')">eˣ</button>
-      <button onclick="insert('Math.PI')">π</button>
+      <button class="key" data-value="7">7</button>
+      <button class="key" data-value="8">8</button>
+      <button class="key" data-value="9">9</button>
+      <button class="key fn" data-action="exp">exp</button>
+      <button class="key fn" data-action="pow">xʸ</button>
+      <button class="key op" data-value="-">−</button>
+
+      <button class="key" data-value="4">4</button>
+      <button class="key" data-value="5">5</button>
+      <button class="key" data-value="6">6</button>
+      <button class="key fn" data-action="ln">ln</button>
+      <button class="key fn" data-action="fact">n!</button>
+      <button class="key op" data-value="+">+</button>
+
+      <button class="key" data-value="1">1</button>
+      <button class="key" data-value="2">2</button>
+      <button class="key" data-value="3">3</button>
+      <button class="key wide" data-value="0">0</button>
+      <button class="key" data-value=".">.</button>
+      <button class="key op tall" data-action="equals">=</button>
+    </div>
+    <div class="footer">
+      <span>Scientific Calculator</span>
+      <span>2025</span>
     </div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
