--- a/index.html
+++ b/index.html
@@ -1,54 +1,79 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scientific Calculator</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Scientific Calculator</title>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="calculator">
-    <div class="display">
-      <div id="history" class="history"></div>
-      <div id="result" class="result">0</div>
-    </div>
-    <div class="keys">
-      <button class="key fn" data-action="clear">AC</button>
-      <button class="key fn" data-action="del">DEL</button>
-      <button class="key fn" data-value="(">(</button>
-      <button class="key fn" data-value=")">)</button>
-      <button class="key fn" data-action="sqrt">√</button>
-      <button class="key op" data-value="/">÷</button>
+<main class="calculator">
+<header class="calc-header">
+<h1>Scientific Calculator</h1>
+</header>
 
-      <button class="key fn" data-action="sin">sin</button>
-      <button class="key fn" data-action="cos">cos</button>
-      <button class="key fn" data-action="tan">tan</button>
-      <button class="key fn" data-action="log">log</button>
-      <button class="key fn" data-action="pi">π</button>
-      <button class="key op" data-value="*">×</button>
 
-      <button class="key" data-value="7">7</button>
-      <button class="key" data-value="8">8</button>
-      <button class="key" data-value="9">9</button>
-      <button class="key fn" data-action="exp">exp</button>
-      <button class="key fn" data-action="pow">xʸ</button>
-      <button class="key op" data-value="-">−</button>
+<section class="display">
+<div id="history" aria-hidden="true"></div>
+<input id="output" class="output" type="text" inputmode="none" aria-label="Calculator display" readonly />
+</section>
 
-      <button class="key" data-value="4">4</button>
-      <button class="key" data-value="5">5</button>
-      <button class="key" data-value="6">6</button>
-      <button class="key fn" data-action="ln">ln</button>
-      <button class="key fn" data-action="fact">n!</button>
-      <button class="key op" data-value="+">+</button>
 
-      <button class="key" data-value="1">1</button>
-      <button class="key" data-value="2">2</button>
-      <button class="key" data-value="3">3</button>
-      <button class="key wide" data-value="0">0</button>
-      <button class="key" data-value=".">.</button>
-      <button class="key op tall" data-action="equals">=</button>
-    </div>
-  </div>
-  <script src="script.js"></script>
+<section class="buttons">
+<button class="btn wide" data-action="clear">C</button>
+<button class="btn" data-action="back">⌫</button>
+<button class="btn" data-value="%">%</button>
+<button class="btn" data-value="/">÷</button>
+
+
+<button class="btn" data-value="7">7</button>
+<button class="btn" data-value="8">8</button>
+<button class="btn" data-value="9">9</button>
+<button class="btn" data-value="*">×</button>
+
+
+<button class="btn" data-value="4">4</button>
+<button class="btn" data-value="5">5</button>
+<button class="btn" data-value="6">6</button>
+<button class="btn" data-value="-">−</button>
+
+
+<button class="btn" data-value="1">1</button>
+<button class="btn" data-value="2">2</button>
+<button class="btn" data-value="3">3</button>
+<button class="btn" data-value="+">+</button>
+
+
+<button class="btn" data-value="0">0</button>
+<button class="btn" data-value=".">.</button>
+<button class="btn" data-action="paren">( )</button>
+<button class="btn equals" data-action="equals">=</button>
+
+
+<button class="btn func" data-fn="sqrt">√</button>
+<button class="btn func" data-fn="pow">xʸ</button>
+<button class="btn func" data-fn="ln">ln</button>
+<button class="btn func" data-fn="log">log</button>
+
+
+<button class="btn func" data-fn="sin">sin</button>
+<button class="btn func" data-fn="cos">cos</button>
+<button class="btn func" data-fn="tan">tan</button>
+<button class="btn func" data-fn="factorial">n!</button>
+
+
+<button class="btn mode" id="degRad">DEG</button>
+<button class="btn" data-fn="pi">π</button>
+<button class="btn" data-fn="e">e</button>
+<button class="btn" data-fn="rand">rand</button>
+</section>
+
+
+<footer class="credits">Built with HTML • CSS • JavaScript</footer>
+</main>
+
+
+<script src="script.js"></script>
 </body>
 </html>
