--- a/index.html
+++ b/index.html
@@ -1,88 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Scientific Calculator</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scientific Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main class="calculator" role="application" aria-label="Scientific calculator">
-    <div class="screen">
-      <div id="prev" class="prev" aria-hidden="true"></div>
-      <input id="display" class="display" readonly aria-label="Calculator display" value="0">
-    </div>
+    <div class="calculator">
+        <input type="text" id="display" readonly>
+        <div class="calculator-buttons">
+            <button onclick="appendToDisplay('(')">(</button>
+            <button onclick="appendToDisplay(')')">)</button>
+            <button onclick="clearDisplay()">C</button>
+            <button onclick="deleteLast()">DEL</button>
+            <button onclick="appendToDisplay('/')" class="operator">÷</button>
+            
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+            <button onclick="appendToDisplay('Math.sqrt(')">√</button>
+            <button onclick="appendToDisplay('*')" class="operator">×</button>
 
-    <div class="controls-row">
-      <div class="left">
-        <label class="small-toggle">
-          <input type="checkbox" id="degToggle" />
-          <span>Deg</span>
-        </label>
-        <div class="memory">
-          <button data-action="mc" title="Memory Clear">MC</button>
-          <button data-action="mr" title="Memory Recall">MR</button>
-          <button data-action="mplus" title="Memory Add">M+</button>
-          <button data-action="mminus" title="Memory Subtract">M-</button>
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+            <button onclick="appendToDisplay('**')">xʸ</button>
+            <button onclick="appendToDisplay('-')" class="operator">−</button>
+
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+            <button onclick="appendToDisplay('Math.log10(')">log</button>
+            <button onclick="appendToDisplay('+')" class="operator">+</button>
+
+            <button onclick="appendToDisplay('Math.sin(')">sin</button>
+            <button onclick="appendToDisplay('0')">0</button>
+            <button onclick="appendToDisplay('.')">.</button>
+            <button onclick="appendToDisplay('Math.cos(')">cos</button>
+            <button onclick="calculateResult()" class="equals">=</button>
         </div>
-      </div>
-      <div class="right">
-        <button data-action="clear">C</button>
-        <button data-action="back">⌫</button>
-      </div>
     </div>
-
-    <div class="buttons">
-      <!-- Scientific row -->
-      <button data-value="(">(</button>
-      <button data-value=")">)</button>
-      <button data-value="^">x^y</button>
-      <button data-action="sqrt">√</button>
-
-      <button data-action="sin">sin</button>
-      <button data-action="cos">cos</button>
-      <button data-action="tan">tan</button>
-      <button data-action="fact">n!</button>
-
-      <button data-action="asin">asin</button>
-      <button data-action="acos">acos</button>
-      <button data-action="atan">atan</button>
-      <button data-action="exp">exp</button>
-
-      <button data-value="7">7</button>
-      <button data-value="8">8</button>
-      <button data-value="9">9</button>
-      <button data-action="div">÷</button>
-
-      <button data-value="4">4</button>
-      <button data-value="5">5</button>
-      <button data-value="6">6</button>
-      <button data-action="mul">×</button>
-
-      <button data-value="1">1</button>
-      <button data-value="2">2</button>
-      <button data-value="3">3</button>
-      <button data-action="sub">−</button>
-
-      <button data-value="0">0</button>
-      <button data-value=".">.</button>
-      <button data-action="percent">%</button>
-      <button data-action="add">+</button>
-
-      <button data-action="pi">π</button>
-      <button data-action="e">e</button>
-      <button data-action="log">log</button>
-      <button data-action="ln">ln</button>
-
-      <button class="wide" data-action="ans">Ans</button>
-      <button class="equals" data-action="equals">=</button>
-    </div>
-
-    <footer class="attribution">
-      Built with HTML • CSS • JavaScript — Keyboard supported
-    </footer>
-  </main>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
